# atompaw

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  spkg-install
config/m4/: libxc.m4
example/C/: C.atomicdata  C.atompaw.input
example/Cu/: Cu.atomicdata  Cu.atompaw.input
example/F/: F.atompaw.input
example/Li/: Li.atompaw.input
src/: Makefile.am  Makefile.in  abinitinterface.f90  aeatom.f90  anderson_realmix.f90  atomdata.f90  atompaw_prog.f90  basis.f90  calcpotential.f90  excor.f90  globalmath.f90  graphatom.f90  gridmod.f90  libxc_mod.F90  pseudo.f90  pwscfinterface.f90  radialsch.f90  radialsr.f90
